<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_snackbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.neumeng.mddemo.SnackbarActivity">

    <Button
        android:onClick="showSanckbarSimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_simple" />
    <Button
        android:onClick="showSanckbarConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_config" />
    <Button
        android:onClick="showSanckbarBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_background" />
    <Button
        android:onClick="showInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_info" />
    <Button
        android:onClick="showSanckbarWaring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_warning" />
    <Button
        android:onClick="showSanckbarAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_alert" />
    <Button
        android:onClick="showSanckbarConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_confirm" />
</LinearLayout>
